force-app/main/default/objects/Headless_Identity_Flow_Instance__c/Headless_Identity_Flow_Instance__c.object-meta.xml
<CustomObject>
    <description>This object was created to handle process breaks to better handle the headless identity APIs it will handle (storing verification code for passwordless and email verification data and other data if necessary)</description>
    <label>Headless Identity Flow Instance</label>
    <nameField>
        <displayFormat>id-{0000000000}</displayFormat>
        <label>Headless Identity Flow Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Headless Identity Flow Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>