force-app/main/default/objects/Headless_Identity_Flow_Instance__c/fields/Flow_Type__c.field-meta.xml
<CustomField>
    <fullName>Flow_Type__c</fullName>
    <label>Flow Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PasswordlessEmailVerification</fullName>
            </value>
            <value>
                <fullName>PasswordlessLogin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>