force-app/main/default/objects/Headless_Identity_Flow_Instance__c/fields/GuestCart_id__c.field-meta.xml
<CustomField>
    <fullName>GuestCart_id__c</fullName>
    <label>Guest Cart ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>