force-app/main/default/objects/Headless_Identity_Flow_Instance__c/fields/GuestCustomerId__c.field-meta.xml
<CustomField>
    <fullName>GuestCustomerId__c</fullName>
    <label>Guest Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>