force-app/main/default/objects/Headless_Identity_Flow_Instance__c/fields/GuestSlasToken__c.field-meta.xml
<CustomField>
    <fullName>GuestSlasToken__c</fullName>
    <label>Guest Slas Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>