force-app/main/default/objects/Headless_Identity_Flow_Instance__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Identifier</label>
    <length>32</length>
    <type>Text</type>
</CustomField>