force-app/main/default/objects/Headless_Identity_Flow_Instance__c/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <label>Locale</label>
    <length>6</length>
    <type>Text</type>
</CustomField>