force-app/main/default/objects/Headless_Identity_Flow_Instance__c/fields/Redirect_Uri__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Uri__c</fullName>
    <label>Redirect Uri</label>
    <type>Url</type>
</CustomField>