force-app/main/default/objects/Headless_Identity_Flow_Instance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDENTIFIER_ISSUED</fullName>
            </value>
            <value>
                <fullName>IDENTIFIER_USED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>