force-app/main/default/objects/Headless_Identity_Flow_Instance__c/fields/Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>Verification_Method__c</fullName>
    <label>Verification Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>sms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>